fix: change endpoint only

--- a/humi_bookmark/manifest.json
+++ b/humi_bookmark/manifest.json
@@ -10,6 +10,7 @@
     "*://*.ameba.jp/*",
     "*://*.cloudfront.net/*",
     "*://*.seio.club/*",
+    "*://*.run.app/*",
     "tabs",
     "activeTab",
     "webRequest",
