--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "humi_bookmark",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.2",
   "type": "module",
+  "packageManager": "pnpm@7.13.5",
+  "engines": {
+    "node": "19",
+    "pnpm": ">=7"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -13,10 +18,10 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.1.0",
-    "typescript": "^4.6.4",
-    "vite": "^3.1.0"
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.8",
+    "@vitejs/plugin-react": "^2.2.0",
+    "typescript": "^4.8.4",
+    "vite": "^3.2.2"
   }
 }
