fix: add tailwind, daisyui

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "CRXJS React Vite Example",
+  "name": "文緒ブックマークv002",
   "version": "0.0.2",
   "description": "descriptions example",
   "icons": {
