--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^1.0.14",
-    "@types/chrome": "^0.0.202",
+    "@types/chrome": "^0.0.203",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "@types/web": "^0.0.81",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
     "@vitejs/plugin-react": "^2.2.0",
     "autoprefixer": "^10.4.13",
-    "daisyui": "^2.41.0",
+    "daisyui": "^2.42.1",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
@@ -40,7 +41,6 @@
     "eslint-plugin-react": "^7.31.11",
     "postcss": "^8.4.19",
     "prettier": "^2.8.0",
-    "prettier-standard": "^16.4.1",
     "tailwindcss": "^3.2.4",
     "typescript": "*",
     "vite": "^3.2.4"
