--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "prettier": "^2.8.0",
     "tailwindcss": "^3.2.4",
     "typescript": "*",
-    "vite": "^3.2.4"
+    "vite": "^3.2.4",
+    "vitest": "^0.25.3"
   }
 }
