--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "preview": "vite preview",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "prepare": "husky install"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -39,11 +40,17 @@
     "eslint-plugin-n": "^15.5.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.31.11",
+    "husky": "^8.0.2",
+    "lint-staged": "^13.0.4",
     "postcss": "^8.4.19",
     "prettier": "^2.8.0",
     "tailwindcss": "^3.2.4",
     "typescript": "*",
     "vite": "^3.2.4",
     "vitest": "^0.25.3"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,cjs}": "eslint --cache --fix",
+    "*.{js,jsx,ts,tsx,cjs,css,md,json}": "prettier --write"
   }
 }
