--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/web": "^0.0.83",
-    "@typescript-eslint/eslint-plugin": "^5.45.0",
-    "@typescript-eslint/parser": "^5.45.0",
+    "@typescript-eslint/eslint-plugin": "^5.45.1",
+    "@typescript-eslint/parser": "^5.45.1",
     "@vitejs/plugin-react": "^2.2.0",
     "autoprefixer": "^10.4.13",
     "daisyui": "^2.42.1",
@@ -37,17 +37,17 @@
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-gitignore": "^0.1.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.5.1",
+    "eslint-plugin-n": "^15.6.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.31.11",
     "husky": "^8.0.2",
-    "lint-staged": "^13.0.4",
+    "lint-staged": "^13.1.0",
     "postcss": "^8.4.19",
-    "prettier": "^2.8.0",
+    "prettier": "^2.8.1",
     "tailwindcss": "^3.2.4",
-    "typescript": "*",
-    "vite": "^3.2.4",
-    "vitest": "^0.25.3"
+    "typescript": "^4.9.4",
+    "vite": "^3.2.5",
+    "vitest": "^0.25.5"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,cjs}": "eslint --cache --fix",
