fix: change worker

--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
   "manifest_version": 3,
-  "name": "文緒ブックマークv002",
+  "name": "文緒ブックマーク v2",
   "version": "0.0.2",
   "description": "descriptions example",
   "icons": {
-    "128": "icon.png"
+    "128": "humio_128.png"
   },
   "action": {
     "default_popup": "index.html"
@@ -12,7 +12,17 @@
   "content_scripts": [
     {
       "js": ["src/content_scripts/index.ts"],
-      "matches": ["*://vcard.ameba.jp/*", "*://*.cloudfront.net/*"]
+      "matches": ["*://vcard.ameba.jp/*"]
     }
-  ]
+  ],
+  "background": {
+    "service_worker": "src/service_worker/index.ts",
+    "type": "module"
+  },
+  "permissions": [
+    "webRequest",
+    "declarativeNetRequest",
+    "declarativeNetRequestFeedback"
+  ],
+  "host_permissions": ["https://vcard.ameba.jp/*"]
 }
