--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.2",
   "type": "module",
-  "packageManager": "pnpm@7.21.0",
+  "packageManager": "pnpm@7.25.0",
   "engines": {
     "node": "19",
     "pnpm": ">=7"
@@ -23,26 +23,27 @@
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "2.0.0-beta.9",
+    "@extend-chrome/storage": "^1.5.0",
     "@types/chrome": "^0.0.206",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@types/web": "^0.0.86",
-    "@typescript-eslint/eslint-plugin": "^5.47.1",
-    "@typescript-eslint/parser": "^5.47.1",
-    "@vitejs/plugin-react": "^3.0.0",
-    "eslint": "^8.31.0",
-    "eslint-config-prettier": "^8.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
+    "@vitejs/plugin-react": "^3.0.1",
+    "eslint": "^8.32.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-config-standard-with-typescript": "^24.0.0",
     "eslint-gitignore": "^0.1.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.6.0",
+    "eslint-plugin-import": "^2.27.4",
+    "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.31.11",
-    "husky": "^8.0.2",
+    "eslint-plugin-react": "^7.32.0",
+    "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
-    "prettier": "^2.8.1",
+    "prettier": "^2.8.3",
     "typescript": "^4.9.4",
-    "vite": "^4.0.3",
+    "vite": "^4.0.4",
     "vitest": "^0.26.3"
   },
   "lint-staged": {
