--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@extend-chrome/storage": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "2.0.0-beta.15",
-    "@extend-chrome/storage": "^1.5.0",
     "@types/chrome": "^0.0.224",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
@@ -39,12 +39,12 @@
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.0",
     "prettier": "^2.8.6",
     "typescript": "^5.0.2",
-    "vite": "^4.2.1",
-    "vitest": "^0.29.7"
+    "vite": "^4.2.1"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,cjs}": "eslint --cache --fix",
