--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.5.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0"
   },
   "devDependencies": {
-    "@chakra-ui/react": "^2.5.2",
     "@crxjs/vite-plugin": "2.0.0-beta.15",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
@@ -33,7 +34,7 @@
     "@types/web": "^0.0.99",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-react-swc": "^3.2.0",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
@@ -48,7 +49,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.0",
     "prettier": "^2.8.6",
-    "typescript": "^5.0.2",
+    "typescript": "^4.9.5",
     "vite": "^4.2.1"
   },
   "lint-staged": {
