fix: purge unused packages, and ui components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["./src", "./*.cjs", "./vite.config.ts"],
+  "include": ["./src", ".eslintrc.cjs", "./vite.config.ts"],
   "references": [
     {
       "path": "./tsconfig.node.json"
