--- a/renovate.json
+++ b/renovate.json
@@ -18,8 +18,7 @@
     {
       "matchDepTypes": ["dependencies"],
       "matchUpdateTypes": ["minor", "patch"],
-      "groupName": "dependencies (non-major)",
-      "rangeStrategy": "pin"
+      "groupName": "dependencies (non-major)"
     }
   ]
 }
