--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint:fix": "eslint --fix .",
     "format": "prettier --write .",
     "prepare": "husky install",
-    "test": "vitest",
+    "test": "vitest run",
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
@@ -31,7 +31,7 @@
   "devDependencies": {
     "@crxjs/vite-plugin": "2.0.0-beta.17",
     "@types/chrome": "^0.0.237",
-    "@types/react": "^18.2.9",
+    "@types/react": "^18.2.11",
     "@types/react-dom": "^18.2.4",
     "@types/web": "^0.0.99",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
@@ -47,6 +47,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "happy-dom": "^9.20.3",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
