--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,10 +16,11 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x, 20.x]
+        node-version: [18, 20]
 
     steps:
     - uses: actions/checkout@v3
+    - uses: pnpm/action-setup@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
